[gd_scene load_steps=95 format=3 uid="uid://hmkt55eyemji"]

[ext_resource type="Texture2D" uid="uid://dhgk1gbbednt7" path="res://Assets/Island_no_bg-sheet.png" id="1_1o0e5"]
[ext_resource type="Script" path="res://scripts/planet_icon.gd" id="1_twbqu"]
[ext_resource type="Texture2D" uid="uid://buwsx3vv43r8j" path="res://Assets/citizens/DinoSprites - doux.png" id="3_0es2y"]
[ext_resource type="PackedScene" uid="uid://cdwafagcywems" path="res://entities/planet_info.tscn" id="3_ft6ka"]
[ext_resource type="Texture2D" uid="uid://cnfpge5rnc6cu" path="res://Assets/citizens/DinoSprites - vita.png" id="4_c6vyl"]
[ext_resource type="Texture2D" uid="uid://bb2e2ygpridbn" path="res://Assets/emote_exclamation.png" id="4_tjfql"]
[ext_resource type="Texture2D" uid="uid://c7me4pl1ud2yj" path="res://Assets/citizens/DinoSprites - mort.png" id="5_14cg8"]
[ext_resource type="Texture2D" uid="uid://dlmk5act5tx2f" path="res://Assets/citizens/DinoSprites - tard.png" id="6_5u14w"]
[ext_resource type="Texture2D" uid="uid://dw4xre164rwxh" path="res://Assets/Bubble/Bubble.png" id="6_hhho1"]
[ext_resource type="Script" path="res://entities/game_over_canvas.gd" id="6_l3vx6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4gruq"]
atlas = ExtResource("3_0es2y")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hv0y"]
atlas = ExtResource("3_0es2y")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf8ls"]
atlas = ExtResource("3_0es2y")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvv1f"]
atlas = ExtResource("3_0es2y")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ps6l5"]
atlas = ExtResource("4_c6vyl")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4koh"]
atlas = ExtResource("4_c6vyl")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivml2"]
atlas = ExtResource("4_c6vyl")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jvba"]
atlas = ExtResource("4_c6vyl")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dq256"]
atlas = ExtResource("5_14cg8")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2dwx"]
atlas = ExtResource("5_14cg8")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_e57gx"]
atlas = ExtResource("5_14cg8")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_htvqj"]
atlas = ExtResource("5_14cg8")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_aujvj"]
atlas = ExtResource("6_5u14w")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdbd1"]
atlas = ExtResource("6_5u14w")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_30iex"]
atlas = ExtResource("6_5u14w")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_85auy"]
atlas = ExtResource("6_5u14w")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdtyw"]
atlas = ExtResource("3_0es2y")
region = Rect2(312, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_et67n"]
atlas = ExtResource("3_0es2y")
region = Rect2(336, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_521m3"]
atlas = ExtResource("3_0es2y")
region = Rect2(360, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmdey"]
atlas = ExtResource("4_c6vyl")
region = Rect2(312, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mry5c"]
atlas = ExtResource("4_c6vyl")
region = Rect2(336, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yhjl"]
atlas = ExtResource("4_c6vyl")
region = Rect2(360, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_okdvk"]
atlas = ExtResource("5_14cg8")
region = Rect2(312, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfgqt"]
atlas = ExtResource("5_14cg8")
region = Rect2(336, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_c88o5"]
atlas = ExtResource("5_14cg8")
region = Rect2(360, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0t65"]
atlas = ExtResource("6_5u14w")
region = Rect2(312, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxl7k"]
atlas = ExtResource("6_5u14w")
region = Rect2(336, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vq1l3"]
atlas = ExtResource("6_5u14w")
region = Rect2(360, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mu2do"]
atlas = ExtResource("3_0es2y")
region = Rect2(432, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8q7p"]
atlas = ExtResource("3_0es2y")
region = Rect2(456, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xhug"]
atlas = ExtResource("3_0es2y")
region = Rect2(480, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6ukf"]
atlas = ExtResource("3_0es2y")
region = Rect2(504, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_sntnv"]
atlas = ExtResource("3_0es2y")
region = Rect2(528, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kv6ls"]
atlas = ExtResource("3_0es2y")
region = Rect2(552, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bho1"]
atlas = ExtResource("4_c6vyl")
region = Rect2(432, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6l4t7"]
atlas = ExtResource("4_c6vyl")
region = Rect2(456, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0tld"]
atlas = ExtResource("4_c6vyl")
region = Rect2(480, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqmre"]
atlas = ExtResource("4_c6vyl")
region = Rect2(504, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xyiua"]
atlas = ExtResource("4_c6vyl")
region = Rect2(528, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihij7"]
atlas = ExtResource("4_c6vyl")
region = Rect2(552, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_i30ar"]
atlas = ExtResource("5_14cg8")
region = Rect2(432, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_blxt1"]
atlas = ExtResource("5_14cg8")
region = Rect2(456, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o62u8"]
atlas = ExtResource("5_14cg8")
region = Rect2(480, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ty2f8"]
atlas = ExtResource("5_14cg8")
region = Rect2(504, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jk3yo"]
atlas = ExtResource("5_14cg8")
region = Rect2(528, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_eunb5"]
atlas = ExtResource("5_14cg8")
region = Rect2(552, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsl0q"]
atlas = ExtResource("6_5u14w")
region = Rect2(432, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wej27"]
atlas = ExtResource("6_5u14w")
region = Rect2(456, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3sov"]
atlas = ExtResource("6_5u14w")
region = Rect2(480, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgl1o"]
atlas = ExtResource("6_5u14w")
region = Rect2(504, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk333"]
atlas = ExtResource("6_5u14w")
region = Rect2(528, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqdpx"]
atlas = ExtResource("6_5u14w")
region = Rect2(552, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_cga4c"]
atlas = ExtResource("3_0es2y")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ntnm"]
atlas = ExtResource("3_0es2y")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxyel"]
atlas = ExtResource("3_0es2y")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgwld"]
atlas = ExtResource("3_0es2y")
region = Rect2(168, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_657yb"]
atlas = ExtResource("3_0es2y")
region = Rect2(192, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4xv3"]
atlas = ExtResource("3_0es2y")
region = Rect2(216, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwpk4"]
atlas = ExtResource("4_c6vyl")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5gwx"]
atlas = ExtResource("4_c6vyl")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0iubk"]
atlas = ExtResource("4_c6vyl")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_k21yj"]
atlas = ExtResource("4_c6vyl")
region = Rect2(168, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffd5l"]
atlas = ExtResource("4_c6vyl")
region = Rect2(192, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ti7wc"]
atlas = ExtResource("4_c6vyl")
region = Rect2(216, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0cxe"]
atlas = ExtResource("5_14cg8")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wayot"]
atlas = ExtResource("5_14cg8")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrfpr"]
atlas = ExtResource("5_14cg8")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_exh3m"]
atlas = ExtResource("5_14cg8")
region = Rect2(168, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgpwc"]
atlas = ExtResource("5_14cg8")
region = Rect2(192, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfl8y"]
atlas = ExtResource("5_14cg8")
region = Rect2(216, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbngw"]
atlas = ExtResource("6_5u14w")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6bnb"]
atlas = ExtResource("6_5u14w")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldkqq"]
atlas = ExtResource("6_5u14w")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gr22w"]
atlas = ExtResource("6_5u14w")
region = Rect2(168, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7v5u"]
atlas = ExtResource("6_5u14w")
region = Rect2(192, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijkjl"]
atlas = ExtResource("6_5u14w")
region = Rect2(216, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_orjuh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gruq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hv0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf8ls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvv1f")
}],
"loop": true,
"name": &"default_blue",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ps6l5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4koh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivml2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jvba")
}],
"loop": true,
"name": &"default_green",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dq256")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2dwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e57gx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htvqj")
}],
"loop": true,
"name": &"default_red",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aujvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdbd1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30iex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85auy")
}],
"loop": true,
"name": &"default_yellow",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdtyw")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_et67n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_521m3")
}],
"loop": false,
"name": &"die_blue",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmdey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mry5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yhjl")
}],
"loop": true,
"name": &"die_green",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_okdvk")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_nfgqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c88o5")
}],
"loop": true,
"name": &"die_red",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0t65")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_pxl7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vq1l3")
}],
"loop": true,
"name": &"die_yellow",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mu2do")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8q7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xhug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6ukf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sntnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kv6ls")
}],
"loop": true,
"name": &"run_blue",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bho1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6l4t7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0tld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqmre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyiua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihij7")
}],
"loop": true,
"name": &"run_green",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i30ar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blxt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o62u8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ty2f8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jk3yo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eunb5")
}],
"loop": true,
"name": &"run_red",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsl0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wej27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3sov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgl1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk333")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqdpx")
}],
"loop": true,
"name": &"run_yellow",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cga4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ntnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxyel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgwld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_657yb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4xv3")
}],
"loop": true,
"name": &"walk_blue",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwpk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5gwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0iubk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k21yj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffd5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ti7wc")
}],
"loop": true,
"name": &"walk_green",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0cxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wayot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrfpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exh3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgpwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfl8y")
}],
"loop": true,
"name": &"walk_red",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbngw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6bnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldkqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gr22w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7v5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijkjl")
}],
"loop": true,
"name": &"walk_yellow",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_7vp6t"]
atlas = ExtResource("6_hhho1")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_58qxo"]
atlas = ExtResource("6_hhho1")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8xj3"]
atlas = ExtResource("6_hhho1")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6csv"]
atlas = ExtResource("6_hhho1")
region = Rect2(0, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_axowc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vp6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58qxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8xj3")
}],
"loop": false,
"name": &"burst",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6csv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_regtf"]
radius = 43.0116

[sub_resource type="Theme" id="Theme_s5u2y"]

[node name="PlanetIcon" type="Node2D"]
script = ExtResource("1_twbqu")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_1o0e5")

[node name="Pop_Icons" type="Node2D" parent="."]

[node name="red" type="AnimatedSprite2D" parent="Pop_Icons"]
visible = false
y_sort_enabled = true
texture_filter = 1
position = Vector2(38, -27)
rotation = 3.14159
scale = Vector2(1, -1)
sprite_frames = SubResource("SpriteFrames_orjuh")
animation = &"default_red"
autoplay = "default_red"

[node name="blue" type="AnimatedSprite2D" parent="Pop_Icons"]
visible = false
y_sort_enabled = true
texture_filter = 1
position = Vector2(-30, -25)
sprite_frames = SubResource("SpriteFrames_orjuh")
animation = &"default_blue"
autoplay = "default_blue"

[node name="yellow" type="AnimatedSprite2D" parent="Pop_Icons"]
visible = false
y_sort_enabled = true
texture_filter = 1
position = Vector2(17, -22)
sprite_frames = SubResource("SpriteFrames_orjuh")
animation = &"default_yellow"
autoplay = "default_yellow"

[node name="green" type="AnimatedSprite2D" parent="Pop_Icons"]
visible = false
y_sort_enabled = true
texture_filter = 1
position = Vector2(-7, -31)
rotation = 3.14159
scale = Vector2(1, -1)
sprite_frames = SubResource("SpriteFrames_orjuh")
animation = &"default_green"
autoplay = "default_green"

[node name="Bubble" type="AnimatedSprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.25098)
position = Vector2(1, -17)
scale = Vector2(0.880211, 0.880211)
sprite_frames = SubResource("SpriteFrames_axowc")
animation = &"burst"

[node name="PlanetInfo" parent="." instance=ExtResource("3_ft6ka")]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_regtf")

[node name="InfoPanel" type="PanelContainer" parent="."]
clip_contents = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 66.0
offset_top = -95.0
offset_right = 206.0
offset_bottom = -15.0
grow_vertical = 0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="InfoPanel"]
layout_mode = 2
size_flags_horizontal = 0

[node name="IdLabel" type="Label" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Placeholder"

[node name="PopulationLabel" type="Label" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Placeholder"

[node name="FoodLabel" type="Label" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Placeholder"

[node name="OxygenLabel" type="Label" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Placeholder"

[node name="WaterLabel" type="Label" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Placeholder"

[node name="MoraleLabel" type="Label" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Placeholder"

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
offset_left = -17.0
offset_top = -96.0
offset_right = 23.0
offset_bottom = -60.0
texture = ExtResource("4_tjfql")

[node name="GameOverCanvas" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("6_l3vx6")

[node name="GameOver" type="PanelContainer" parent="GameOverCanvas"]
clip_contents = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.0
offset_top = -90.5
offset_right = 149.0
offset_bottom = 90.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverCanvas/GameOver"]
layout_mode = 2

[node name="Title" type="Label" parent="GameOverCanvas/GameOver/VBoxContainer"]
layout_mode = 2
text = "You let this colony die!"
horizontal_alignment = 1

[node name="Score" type="Label" parent="GameOverCanvas/GameOver/VBoxContainer"]
layout_mode = 2
text = "You reached a population of:
"

[node name="Go_Home_Button" type="Button" parent="GameOverCanvas/GameOver/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_s5u2y")
text = "Back to Home Screen"

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="pressed" from="GameOverCanvas/GameOver/VBoxContainer/Go_Home_Button" to="GameOverCanvas" method="_on_go_home_button_pressed"]
